Added documentation for FDR&C

--- a/code/utility/README.html
+++ b/code/utility/README.html
@@ -140,6 +140,9 @@ $(document).ready(function () {
 <hr />
 <p><strong>4. Generating random pseudo-dna-sequence:</strong></p>
 <p><a href="4_random_sequence_generator.ipynb" class="uri">4_random_sequence_generator.ipynb</a></p>
+<hr />
+<p><strong>5. Calculating the False Discovery Rate and the C-statistics of a model:</strong></p>
+<p><a href="FDR_and_C_stats.ipynb" class="uri">FDR_and_C_stats.ipynb</a></p>
 
 
 
